# ChangeLog for sys-fs/vhba
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Jul 2008; Michał Ziąbkowski <mziab@o2.pl> +vhba-1.1.0-r1.ebuild,
  +files/vhba-1.1.0-api.patch:
  Re-added vhba with a patch for compatibility with linux-2.6.26
