@@ -1,4 +1,6 @@
 AUX vhba-1.1.0-api.patch 1195 RMD160 e0a0560264d5806b6cb8910ac536bbc24283ca03 SHA1 ed244309b7362059cc50ff3939b1dcd045d727f9 SHA256 1581aef461530cc8deb035ad5a1906da5cdb2d2f4f2423de96640181f0e5385f
 DIST vhba-module-1.1.0.tar.bz2 13667 RMD160 c68bc151f7889978c65d9e221da2a37954b5b55f SHA1 bb8701d99c1a1166e0ac2ace013b60a7666674d3 SHA256 e22b5d85c8cf47deeee09724cfadb25c5966947350c6e761c4b306eff83f8b2c
+DIST vhba-module-1.2.1.tar.bz2 6585 RMD160 ecdbbd40f34b68816b0eefe43a64a4c664b31580 SHA1 5226b3dd16d793cd58a712e8ca44f3b45194e248 SHA256 1ab729d029c49e5e6231cdec3b9f88f17c44a292fe77f2bfbab506b62999a3ae
 EBUILD vhba-1.1.0-r1.ebuild 1592 RMD160 b459b1376bcdc422fbd35dc279dc24eed8f93928 SHA1 d6a18307aa674f56f1d3d3eb0880aae70009e99f SHA256 ab4ba8d6322aedb5f0517a2ce94add51e7fadca55c287d48afdcf0a3b49449e1
-MISC ChangeLog 281 RMD160 5d6d862ceec14ef523c8025e3a0867e5e978f2ab SHA1 f8e8798f710dc2700872dc31412c16fa6e9988e6 SHA256 25efc1aa6ad12f0068fbf3c10496e45205c2ead8bff73c4da3de92518a1ff5b8
+EBUILD vhba-1.2.1.ebuild 1533 RMD160 6ccea463eb2e3f55a5475095157b58f12515e5d1 SHA1 ef8f7848c987f01cf777b5b69ebd02b0e0a11217 SHA256 532f107cb37aefb07179187975e09be79f475c6abd82a51b8497d3cd936290e6
+MISC ChangeLog 376 RMD160 f779cfda6d4b0b309811f745b51ab6edcc71c255 SHA1 3ca28dc3f755819a8ca90e363837e651f73c4e07 SHA256 ea3a8068458808f05ce3a8bd740e077c7f775973fadd760f335a4126c95c3c01
