@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/vhba
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> +vhba-1.2.1.ebuild:
+  Bumped. Dropped patch.
 
   23 Jul 2008; Michał Ziąbkowski <mziab@o2.pl> +vhba-1.1.0-r1.ebuild,
   +files/vhba-1.1.0-api.patch:
